kubernetes/db/adminer/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: database
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 600m
              memory: 512Mi
