kubernetes/db/adminer/svc-clusterip.yml
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: database
spec:
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
